Fixed BRA-11: menu button in rulebook page goes back to main menu

--- a/src/qtquickcontrols2.conf
+++ b/src/qtquickcontrols2.conf
@@ -5,11 +5,7 @@
 [Controls]
 Style=Material
 
-[Universal]
-Theme=Light
-;Accent=Steel
-
 [Material]
-Theme=Light
-;Accent=BlueGrey
-;Primary=BlueGray
+Theme=Dark
+Accent=Red
+Primary=Brown
