--- a/src/ios/Info.plist
+++ b/src/ios/Info.plist
@@ -42,38 +42,28 @@
         <dict>
             <key>CFBundleIconFiles</key>
             <array>
-                <string>AppIcon29x29.png</string>
-                <string>AppIcon29x29@2x.png</string>
-                <string>AppIcon40x40@2x.png</string>
-                <string>AppIcon57x57.png</string>
-                <string>AppIcon57x57@2x.png</string>
-                <string>AppIcon60x60@2x.png</string>
-            </array>
-        </dict>
-    </dict>
-
-    <key>CFBundleIcons~ipad</key>
-    <dict>
-        <key>CFBundlePrimaryIcon</key>
-        <dict>
-            <key>CFBundleIconFiles</key>
-            <array>
-                <string>AppIcon29x29.png</string>
-                <string>AppIcon29x29@2x.png</string>
-                <string>AppIcon40x40@2x.png</string>
-                <string>AppIcon57x57.png</string>
-                <string>AppIcon57x57@2x.png</string>
-                <string>AppIcon60x60@2x.png</string>
-                <string>AppIcon29x29~ipad.png</string>
-                <string>AppIcon29x29@2x~ipad.png</string>
-                <string>AppIcon40x40~ipad.png</string>
-                <string>AppIcon40x40@2x~ipad.png</string>
-                <string>AppIcon50x50~ipad.png</string>
-                <string>AppIcon50x50@2x~ipad.png</string>
-                <string>AppIcon72x72~ipad.png</string>
-                <string>AppIcon72x72@2x~ipad.png</string>
-                <string>AppIcon76x76~ipad.png</string>
-                <string>AppIcon76x76@2x~ipad.png</string>
+                <string>Icon-App-20x20@1x.png</string>
+                <string>Icon-App-20x20@2x.png</string>
+                <string>Icon-App-20x20@3x.png</string>
+                <string>Icon-App-29x29@1x.png</string>
+                <string>Icon-App-29x29@2x.png</string>
+                <string>Icon-App-29x29@3x.png</string>
+                <string>Icon-App-40x40@1x.png</string>
+                <string>Icon-App-40x40@2x.png</string>
+                <string>Icon-App-40x40@3x.png</string>
+                <string>Icon-App-57x57@1x.png</string>
+                <string>Icon-App-57x57@2x.png</string>
+                <string>Icon-App-60x60@1x.png</string>
+                <string>Icon-App-60x60@2x.png</string>
+                <string>Icon-App-60x60@3x.png</string>
+                <string>Icon-App-72x72@1x.png</string>
+                <string>Icon-App-72x72@2x.png</string>
+                <string>Icon-App-76x76@1x.png</string>
+                <string>Icon-App-76x76@2x.png</string>
+                <string>Icon-App-76x76@3x.png</string>
+                <string>Icon-App-83.5x83.5@2x.png</string>
+                <string>Icon-Small-50x50@1x.png</string>
+                <string>Icon-Small-50x50@2x.png</string>
             </array>
         </dict>
     </dict>
