--- a/src/ios/Info.plist
+++ b/src/ios/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleDisplayName</key>
-    <string>Barbarians: Rulebook</string>
+    <string>Barbarians: The Invasion Compendium</string>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIdentifier</key>
