--- a/src/ios/Info.plist
+++ b/src/ios/Info.plist
@@ -7,17 +7,17 @@
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIdentifier</key>
-    <string>{PRODUCT_BUNDLE_IDENTIFIER}</string>
+    <string>${PRODUCT_BUNDLE_IDENTIFIER}</string>
     <key>CFBundleName</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>{QMAKE_SHORT_VERSION}</string>
+    <string>${QMAKE_SHORT_VERSION}</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>{QMAKE_FULL_VERSION}</string>
+    <string>${QMAKE_FULL_VERSION}</string>
     <key>UIStatusBarHidden</key>
     <true/>
     <key>LSRequiresIPhoneOS</key>
